<?xml version="1.0"?>
<package format="2">
  <name>teb_local_planner</name>

  <version>0.9.1</version>
  
  <description>
    The teb_local_planner package implements a plugin
    to the base_local_planner of the 2D navigation stack.
    The underlying method called Timed Elastic Band locally optimizes
    the robot's trajectory with respect to trajectory execution time,
    separation from obstacles and compliance with kinodynamic constraints at runtime.	
  </description>


  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teb_local_planner</url>

  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>costmap_converter</depend>

  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>libg2o</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>mbf_costmap_core</depend>
  <depend>mbf_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <export>
    <nav_core plugin="${prefix}/teb_local_planner_plugin.xml"/>
    <mbf_costmap_core plugin="${prefix}/teb_local_planner_plugin.xml"/>
  </export>
</package>
