<?xml version="1.0"?>
<package format="2">
  <name>teb_local_planner</name>
  <version>0.6.13</version>
  <description>
    The teb_local_planner package implements a plugin
    to the base_local_planner of the 2D navigation stack.
    The underlying method called Timed Elastic Band locally optimizes
    the robot's trajectory with respect to trajectory execution time,
    separation from obstacles and compliance with kinodynamic constraints at runtime.	
  </description>
  
  <maintainer email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teb_local_planner</url>

  <author email="christoph.roesmann@tu-dortmund.de">Christoph Rösmann</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- <depend>base_local_planner</depend> -->
  <!-- <depend>costmap_2d</depend> -->
  <depend>costmap_converter</depend>
  <depend>costmap_converter_msgs</depend>

  <!-- <depend>dynamic_reconfigure</depend> -->
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>libg2o</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>teb_msgs</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  
  <!-- <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>
  <test_depend>ament_index_cpp</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>